<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="koppi_right">Copyright 2011&#8211;2012 Jakob Flierl</string>
    
    <string name="actionbar_activity_not_found">Failed to open intent&#8230;</string>

    <string name="app_name">LiquiDroid</string>
    
    <string name="account_type">liqui.droid.account</string>
    
    <string name="event">Event</string>
    
    <!-- Action Constants -->
    <string name="action_login_sync">liqui.droid.sync.LOGIN</string>
    
    <!-- Titles -->
    <string name="title_sign_in">Sign in</string>
    <string name="title_explore">Explore</string>
    <string name="title_share">Share</string>
    
    <!-- Menus -->
    <string name="menu_edit_lqfbs">Edit LQFBs</string>
    <string name="menu_sign_in">Sign in</string>

    <string name="menu_feedback">Feedback</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_test">Test</string>
    
    <string name="menu_accounts">Accounts</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_prefs">Settings</string>
    
    <string name="menu_sort_ascending">Sort ascending</string>
    <string name="menu_sort_descending">Sort descending</string>
    <string name="menu_sort_by_id">Sort by Id</string>
	<string name="menu_sort_by_name">Sort by Name</string>
	
	<string name="menu_area_delegation_change">Change area delegation</string>
	<string name="menu_area_participate">Participate in this area</string>
	<string name="menu_area_withdraw">Withdraw area participation</string>
	
	<string name="menu_search">Search</string>
	
	<string name="issue_create">Create a new issue</string>
	
	<!-- Accounts -->
	<string name="account_add">Add account</string>
	<string name="account_ctx_sync_stat">Sync statistics</string>
	<string name="last_update">Last update: </string>
	<string name="last_update_never">Last update: never</string>
	
	<string name="iv_account">Account image</string>
	
	<!-- Actionbar -->
	<string name="ib_actionbar_item">actionbar item</string>
	<string name="iv_home">actionbar home</string>
	<string name="ib_home_item">actionbar home item</string>
	<string name="iv_count">Count</string>
	<string name="iv_membership">Membership</string>
	
	<!-- AreaListCached -->
	
	<string name="tv_title">Title</string>
	<string name="tv_count">Count</string>
	<string name="tv_hash">#</string>
	
	<!-- Breadcrumb -->
    <string name="iv_breadcrumb_right">right breadcrumb image</string>
	
	<!-- LiquiDroid  -->
    <string name="lqfb_name">Instance Name</string>
	<string name="lqfb_web_url">Web URL, e.g. http://host/lf2/</string>
    <string name="lqfb_url">API URL, e.g. http://host:port/</string>
	<string name="lqfb_key">API key, e.g. LKN43nEF357MFF54X</string>
    <string name="bt_lqfb_save">Save..</string>
    
    <string name="lqfb_explore">Explore</string>
    
    <string name="lqfb_signing_in">Signing in&#8230;</string>
    <string name="lqfb_invalid_api_key">Invalid API key</string>
    
    <!-- AreaTreeCached -->
    <string name="units_and_areas">Units &amp; Areas</string>
    
    <!-- CalendarSyncService -->
    <string name="cal_voting_starts">Voting starts.</string>
    
    <!-- ContactsListCached -->
    <string name="contacts">Contacts</string>
    
    <!-- EventsListCached -->
    <string name="events">Events</string>
    
    <!-- LQFBListCached / LQFBEdit -->
    <string name="lqfb_edit_instances">Instances</string>
    <string name="insert">Insert</string>
    <string name="delete">Delete</string>
    <string name="duplicate">Duplicate</string>
    <string name="saved_changes">Saved changes</string>
    
    <!-- Initiative -->
    <string name="iv_initiative">Initiative</string>
    <string name="iv_support">Support</string>
    
    <!-- IssueTreeCached -->
    <string name="iv_state">Issue state</string>
    
    <!-- MemberListCached -->
    <string name="members">Members</string>
    <string name="member_api_key">API key</string>
    <string name="member_sign_in">Sign in</string>
    
    <!-- MemberDetails -->
    <string name="member">Member</string>
    
    <!-- IssueTreeCached -->
    <string name="issues">Issues</string>
    <string name="issues_open">Open</string>
    <string name="issues_closed">Closed</string>
    
    <string name="issue_state_any_phase"     >Any phase</string>
    <string name="issue_state_new"           >New</string>
  	<string name="issue_state_discussion"    >Discussion</string>
    <string name="issue_state_frozen"        >Frozen</string>
    <string name="issue_state_voting"        >Voting</string>
    
    <string name="issue_state_any_state"     >Any state</string>
    <string name="issue_state_finished"      >Finished</string>
    <string name="issue_state_with_winner"   >With winner</string>
    <string name="issue_state_without_winner">Without winner</string>
    <string name="issue_state_cancelled"     >Cancelled</string>
    
    <string name="area_events">Events</string>
    <string name="area_issues_open">Open issues</string>
    <string name="area_issues_closed">Closed issues</string>
    <string name="area_participants">Participants</string>
    <string name="area_delegations">Delegations</string>
    
    <string name="area_join_success">Joined area #%1$s.</string>
    <string name="area_leave_success">Leaved area #%1$s.</string>
    <string name="area_join_error">%2$s</string>
    <string name="area_leave_error">%2$s</string>
    
    <!-- Preferences -->
    <string name="settings_title">Settings</string>
    <string name="settings_general">General settings</string>
    <string name="settings_about">About LiquiDroid</string>
    
    <!-- Search -->
    <string name="search">Search</string>
    <string name="search_type_to_filter">type to filter</string>
    
    <!-- SyncStat -->
    <string name="sync_stat_statistics">Sync statistics</string>

    <!-- Common -->
    
    <string name="invalid_login">Invalid API key</string>
    <string name="sign">&lt;i>Sent via LiquidDroid App&lt;i></string>
    <string name="label_it">Update</string>
    <string name="cancel">Cancel</string>
    <string name="promote">Help Promote LiquidDroid</string>
    <string name="promote_desc">(When checked, the signature \'Sent via LiquiDroid App\' will appear at the bottom of the message)</string>
    <string name="about">About</string>
    <string name="my_name">Jakob Flierl</string>
    <string name="my_email">jakob.flierl@gmail.com</string>
    <string name="my_web">https://github.com/koppi/android-app-lqfb</string>
    <string name="my_username">koppi</string>
    <string name="my_repo">lqfb</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_text">If you have any issues or suggestions, please contact me.  Any kind of feedback is greatly appreciated.</string>
    <string name="feedback_by_email">By Email</string>
    <string name="feedback_by_gh4a">By LiquiDroid</string>
    <string name="settings">Settings</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="donate">Donate</string>
    <string name="donate_text">LiquiDroid is open source and will always be available for free.  If you find it useful consider donating via Paypal (jakob.flierl@gmail.com).  Thank you.</string>
    
    <!-- User -->
    
    <plurals name="user">
        <item quantity="one">User</item>
        <item quantity="other">Users</item>
    </plurals>
    <string name="user">User</string>
    <string name="user_login">Sign in</string>
    <string name="user_name">Name</string>
    
    <string name="user_identification">Identification</string>
    <string name="user_organization">Organization</string>
    <string name="user_realname">Realname</string>
    <string name="user_birthday">Birthday</string>
    <string name="user_address">Address</string>
    
    
    <string name="user_username">Nickname</string>
    <string name="user_password">API key</string>
    <string name="user_email">Email</string>
    <string name="user_website">Website</string>
    <string name="user_company">Organization</string>
    <string name="user_following">Following</string>
    <string name="user_followers">Followers</string><!-- For type organization -->
    <string name="user_members">Members</string><!-- For type organization -->
    <string name="user_location">Location</string>
    <string name="user_last_login">Last login %1$s</string>
    <string name="user_pub_areas">Areas</string>
    
    <string name="user_save">Save&#8230;</string>
    
    <string name="user_gravatar">Gravatar</string>
    
    <string name="user_follow_action">Follow</string>
    <string name="user_unfollow_action">Unfollow</string>
    
    <!-- Area -->
    <plurals name="area">
        <item quantity="one">Area</item>
        <item quantity="other">Areas</item>
    </plurals>
    <string name="area_colon">: </string>
    
    <!-- MemberDetails -->
    <string name="member_success_follow">Followed member #%1$s.</string>
    <string name="member_success_unfollow">Unfollowed member #%1$s.</string>
    <string name="member_error_follow">%2$s</string>
    <string name="member_error_unfollow">%2$s</string>
    
</resources>
